--- a/view/address.html
+++ b/view/address.html
@@ -2,82 +2,89 @@
 
 {% block content %}
 
-{% if alert.done == "address_saved" %}
-  <div class="alert alert-success" role="alert">地址已保存</div>
-{% endif %}
-
-<form method="post">
-
-  <div class="form-row">
-    <div class="form-group col-md-4">
-      <label for="province">省/直辖市</label>
-      <input type="text"
-      id="province"
-      class="form-control"
-      name="address[province]"
-      value="{{address.province}}">
-
-      {% if errors.province %}
-        <div class="form-errtext">{{errors.province.message}}</div>
-      {% endif %}
+  {% if alert %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <span>{{ alert.key | showAlert }}</span>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
-    
-    <div class="form-group col-md-4">
-      <label for="city">市</label>
-      <input type="text"
-        id="city"
-        class="form-control"
-        name="address[city]"
-        value="{{address.city}}">
+  {% endif %}
 
-      {% if errors.city %}
-        <div class="form-errtext">{{errors.city.message}}</div>
-      {% endif %}
-    </div>
+  <div class="mt-3">
+    <form method="post">
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label for="province">省/直辖市</label>
+          <input type="text"
+          id="province"
+          class="form-control"
+          name="address[province]"
+          value="{{address.province}}">
 
-    <div class="form-group col-md-4">
-      <label for="district">区/县</label>
-      <input type="text"
-        id="district"
-        class="form-control"
-        name="address[district]"
-        value="{{address.district}}">
+          {% if errors.province %}
+            <div class="form-errtext">{{errors.province}}</div>
+          {% endif %}
+        </div>
+        
+        <div class="form-group col-md-4">
+          <label for="city">市</label>
+          <input type="text"
+            id="city"
+            class="form-control"
+            name="address[city]"
+            value="{{address.city}}">
 
-      {% if errors.district %}
-        <div class="form-errtext">{{errors.district.message}}</div>
-      {% endif %}
-    </div>
+          {% if errors.city %}
+            <div class="form-errtext">{{errors.city}}</div>
+          {% endif %}
+        </div>
+
+        <div class="form-group col-md-4">
+          <label for="district">区/县</label>
+          <input type="text"
+            id="district"
+            class="form-control"
+            name="address[district]"
+            value="{{address.district}}">
+
+          {% if errors.district %}
+            <div class="form-errtext">{{errors.district}}</div>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-10">
+          <label for="street">街道</label>
+          <input type="text"
+          id="street"
+          class="form-control"
+          name="address[street]"
+          value="{{address.street}}">
+
+          {% if errors.street %}
+            <div class="form-errtext">{{errors.street}}</div>
+          {% endif %}
+        </div>
+
+        <div class="form-group col-md-2">
+          <label for="postcode">邮编</label>
+          <input type="text"
+          id="postcode"
+          class="form-control"
+          name="address[postcode]"
+          value="{{address.postcode}}">
+
+          {% if errors.postcode %}
+            <div class="form-errtext">{{errors.postcode}}</div>
+          {% endif %}
+        </div>
+      </div>
+      
+      <button type="submit" class="btn btn-primary">保存</button>
+    </form>    
   </div>
 
-  <div class="form-row">
-    <div class="form-group col-md-10">
-      <label for="street">街道</label>
-      <input type="text"
-      id="street"
-      class="form-control"
-      name="address[street]"
-      value="{{address.street}}">
-
-      {% if errors.street %}
-        <div class="form-errtext">{{errors.street.message}}</div>
-      {% endif %}
-    </div>
-
-    <div class="form-group col-md-2">
-      <label for="zipCode">邮编</label>
-      <input type="text"
-      id="zipCode"
-      class="form-control"
-      name="address[zipCode]"
-      value="{{address.zipCode}}">
-
-      {% if errors.zipCode %}
-        <div class="form-errtext">{{errors.zipCode.message}}</div>
-      {% endif %}
-    </div>
-  </div>
-  
-  <button type="submit" class="btn btn-primary">保存</button>
-</form>
 
 {% endblock %}
