--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -66,9 +66,9 @@
   <main class="page-content" role="main">
     <div class="container">
       
-      {% if errors.server %}
+      {% if errors.message %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          <span>{{errors.server}}</span>
+          <span>{{errors.message}}</span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -100,9 +100,7 @@
           </div>
       
           <div class="col-sm-9">
-            <div class="mt-4">
-              {% block content %}{% endblock %}
-            </div>
+            {% block content %}{% endblock %}
           </div>
         </div>
 
