padding and margins

--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -77,8 +77,8 @@
 
       {% block main %}
         {% if user and (not user.isVerified) %}
-          <div class="alert alert-primary d-flex align-items-center" role="alert">
-            请验证您的登录邮箱。没有收到验证邮件？
+          <div class="alert alert-primary d-flex align-items-center m-0" role="alert">
+            <span>请验证您的登录邮箱。没有收到验证邮件？</span>
             <form action="{{sitemap.requestVerification}}" method="post">
               <button class="btn btn-link">重新发送</button>
             </form>
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-sm-3">
-            <div class="collapse d-sm-block" id="sidebarNav">
+            <div class="collapse d-sm-block mt-3" id="sidebarNav">
               <nav class="nav flex-column">
                 {% for item in sideNav %}
                   <a class="nav-link{% if item.active %} active{% endif %}" href="{{item.href}}">{{item.text}}</a>
