--- a/view/account.html
+++ b/view/account.html
@@ -11,7 +11,7 @@
     </div>
   {% endif %}
 
-  <section class="pb-3 mb-3 border-bottom">
+  <section class="mt-3 pb-3 mb-3 border-bottom">
     <h5>登录邮箱</h5>
     <form method="post" action="{{sitemap.email}}">
       <div>
