--- a/view/profile/home.html
+++ b/view/profile/home.html
@@ -11,7 +11,7 @@
   </div>
 {% endif %}
 
-<section class="pb-3 mb-3 border-bottom">
+<section class="mt-3 pb-3 mb-3 border-bottom">
   <h5>用户名</h5>
   <form action="{{sitemap.userName}}" method="post">
 
