--- a/view/starred.html
+++ b/view/starred.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-<div>
+<div class="mt-3">
   {% for article in articles %}
     <div class="card mb-4">
       <div class="card-body">
