--- a/view/subscription/membership.html
+++ b/view/subscription/membership.html
@@ -15,7 +15,7 @@
     </dl>
 
     <div class="text-right">
-      <a href="">订单历史</a>
+      <a href="{{ sitemap.subs }}/orders">订单历史</a>
     </div>
   {% else %}
     <h4>订阅FT中文网会员</h4>
