--- a/view/subscription/membership.html
+++ b/view/subscription/membership.html
@@ -1,32 +1,42 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-  {% if account.isVip %}
-    <dl>
-      <dt>会员类型</dt>
-      <dd>VIP</dd>
+  <div class="mt-3">
+    {% if account.isVip %}
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span>会员类型</span>
+        <span>VIP</span>
+      </div>
 
-      <dt>会员期限</dt>
-      <dd>无限期</dd>
-    </dl>
-  {% elif account.isMember %}
-    <div class="pb-3 mb-3 mt-3 border-bottom text-right">
-      <a href="{{ sitemap.renewal }}" class="btn btn-primary">续订</a>
-    </div>
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span>会员期限</span>
+        <span>无限期</span>
+      </div>
 
-    <dl>
-      <dt>会员类型</dt>
-      <dd>{{ account.member.localizeTierCycle }}</dd>
+    {% elif account.membership.tier %}
 
-      <dt>会员期限</dt>
-      <dd>{{ account.member.expireDate }}</dd>
-    </dl>
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span>会员类型</span>
+        <span>{{ account.membership.tier | localize }}/{{ account.membership.cycle | localize }}</span>
+      </div>
 
-    <div class="text-right">
-      <a href="{{ sitemap.subs }}/orders">订单历史</a>
-    </div>
-  {% else %}
-    <h4>订阅FT中文网会员</h4>
-  {% endif %}
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span>会员期限</span>
+        <span>{{ account.membership.expireDate }}</span>
+      </div>
+
+      {#
+      <div class="mb-3 text-right">
+        <a href="{{ sitemap.renewal }}" class="btn btn-primary">续订</a>
+      </div>
+      #}
+      
+      <div class="text-right">
+        <a href="{{ sitemap.subs }}/orders">订单历史</a>
+      </div>
+    {% else %}
+      <h4>订阅FT中文网会员</h4>
+    {% endif %}
+  </div>
 
 {% endblock %}
