--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -67,7 +67,7 @@
     <div class="container">
       
       {% if errors.message %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
           <span>{{errors.message}}</span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -100,6 +100,14 @@
           </div>
       
           <div class="col-sm-9">
+            {% if alert %}
+              <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
+                <span>{{ alert.key | showAlert }}</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+            {% endif %}
             {% block content %}{% endblock %}
           </div>
         </div>
