test page for subscription

--- a/view/subscription/pay.html
+++ b/view/subscription/pay.html
@@ -57,7 +57,7 @@
             {% endif %}
 
             <div class="mt-3">
-              <button type="submit" class="btn btn-primary btn-block">确认</button>
+              <button type="submit" class="btn btn-primary btn-block">支付</button>
             </div>
             
           </form>
