--- a/view/error.html
+++ b/view/error.html
@@ -2,9 +2,10 @@
 {% block main %}
 <div class="container">
   <div class="jumbotron">
-      <h1>{{error.status}} {{error.message}}</h1>
+      <h1>{{error.status}}</h1>
+      <p>{{error.message}}</p>
       {% if not env.isProduction %}
-      <pre>{{error.stack}}</pre>
+        <pre>{{error.stack}}</pre>
       {% endif %}
   </div>
 </div>
