--- a/view/subscription/wxpay-qr.html
+++ b/view/subscription/wxpay-qr.html
@@ -26,6 +26,9 @@
             <small>微信 -> 发现 -> 扫一扫</small>
         </div>
         <a href="{{ sitemap.subsTest }}">支付完成？返回</a>
+        <p class="mt-2 text-muted">
+          <small>注：由于微信支付技术上的限制，此处购买FT会员仅能支持扫码支付。如果您需要在移动设备上购买，请安装FT中文网APP。</small>
+        </p>
       </div>
       
     </div>
