--- a/view/account/account.html
+++ b/view/account/account.html
@@ -1,18 +1,24 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-
-  <div class="mt-3 pb-3 mb-3 border-bottom">
-    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-      <span class="mr-auto">登录邮箱</span>
-      <span class="pl-2 pr-2">{{account.email}}</span>
-      <a href="{{ sitemap.email }}" class="pl-2 pr-2">修改</a>
+  {% if user.isWxOnly() %}
+    <div class="mt-3 text-center">
+      <p>您目前使用了微信账号登录FT中文网。为保障账号安全，建议您绑定在FT中文网注册的邮箱账号。</p>
+    
+      <a class="btn btn-primary" href="">绑定邮箱</a>
     </div>
+  {% else %}
+    <div class="mt-3 pb-3 mb-3 border-bottom">
+      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+        <span class="mr-auto">登录邮箱</span>
+        <span class="pl-2 pr-2">{{account.email}}</span>
+        <a href="{{ sitemap.email }}" class="pl-2 pr-2">修改</a>
+      </div>
 
-    <div class="d-flex justify-content-between">
-      <span class="pr-2">密码</span>
-      <a href="{{ sitemap.password }}" class="pl-2 pr-2">修改</a>
-    </div>   
-  </div>
-
+      <div class="d-flex justify-content-between">
+        <span class="pr-2">密码</span>
+        <a href="{{ sitemap.password }}" class="pl-2 pr-2">修改</a>
+      </div>   
+    </div>
+  {% endif %}
 {% endblock %}
