--- a/view/profile/profile.html
+++ b/view/profile/profile.html
@@ -11,9 +11,8 @@
         <figcaption class="figure-caption">{{ user.wechat.nickname }}</figcaption>
       </figure>
     
-      <p>您目前使用了微信账号登录FT中文网。为保障账号安全，建议您绑定在FT中文网注册的邮箱账号。</p>
-    
-      <a class="btn btn-primary" href="">绑定邮箱</a>
+      {% include "partials/pls-bind.html" %}
+
     </div>
   </div>
 
