--- a/view/starred.html
+++ b/view/starred.html
@@ -1,25 +1,36 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-<div class="mt-3">
-  {% for article in articles %}
-    <div class="card mb-4">
-      <div class="card-body">
-        <h5 class="card-title"><a href="http://www.ftchinese.com/story/{{article.id}}" target="__blank">{{article.title}}</a></h5>
-        <p>{{article.standfirst}}</p>
-        <div>
-            更新于 <time datetime="{{article.updatedAt}}">{{ article.updatedAt | toCST }}</time>
-        </div>
-      </div>
-      <div class="card-footer d-flex justify-content-between">
-         <span>收藏于 <time datetime="{{article.starredAt}}">{{ article.starredAt | toCST }}</time></span>
-         <form action="{{sitemap.starred}}/{{article.id}}/delete" method="post">
-           <button class="btn btn-outline-primary py-0">删除</button>
-         </form>
+
+  {% if user.isWxOnly() %}
+    <div class="mt-3">
+      <div class="mt-3 text-center">
+        <p>绑定FT中文网账号后可以收藏文章</p>
+      
+        <a class="btn btn-primary" href="">绑定账号</a>
       </div>
     </div>
-  {% endfor %}
-</div>
+  {% else %}
+    <div class="mt-3">
+      {% for article in articles %}
+        <div class="card mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><a href="http://www.ftchinese.com/story/{{article.id}}" target="__blank">{{article.title}}</a></h5>
+            <p>{{article.standfirst}}</p>
+            <div>
+                更新于 <time datetime="{{article.updatedAt}}">{{ article.updatedAt | toCST }}</time>
+            </div>
+          </div>
+          <div class="card-footer d-flex justify-content-between">
+            <span>收藏于 <time datetime="{{article.starredAt}}">{{ article.starredAt | toCST }}</time></span>
+            <form action="{{sitemap.starred}}/{{article.id}}/delete" method="post">
+              <button class="btn btn-outline-primary py-0">删除</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
 
-{% include "partials/paging.html" %}
+    {% include "partials/paging.html" %}
+  {% endif %}
 {% endblock %}
