--- a/view/signup.html
+++ b/view/signup.html
@@ -9,7 +9,7 @@
 
     <input class="form-control"
       id="email"
-      type="text"
+      type="email"
       name="account[email]"
       value="{{account.email}}"
       placeholder="电子邮箱"
