--- a/view/login.html
+++ b/view/login.html
@@ -22,6 +22,7 @@
         name="credentials[email]"
         value="{{credentials.email}}"
         placeholder="电子邮箱"
+        maxlength="64"
         required>
 
       {% if errors.email %}
@@ -36,6 +37,7 @@
         type="password"
         name="credentials[password]"
         placeholder="密码"
+        maxlength="64"
         required>
 
       {% if errors.password %}
