feat: set href for bind account

--- a/view/starred.html
+++ b/view/starred.html
@@ -7,7 +7,7 @@
       <div class="mt-3 text-center">
         <p>绑定FT中文网账号后可以收藏文章</p>
       
-        <a class="btn btn-primary" href="">绑定账号</a>
+        <a class="btn btn-primary" href="{{ sitemap.bindEmail }}">绑定账号</a>
       </div>
     </div>
   {% else %}
