--- a/view/account/account.html
+++ b/view/account/account.html
@@ -6,7 +6,7 @@
       {% include "partials/pls-bind.html" %}
     </div>
   {% else %}
-    <div class="mt-3 pb-3 mb-3 border-bottom">
+    <div class="mt-3 pb-3 mb-3">
       <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
         <span class="mr-auto">登录邮箱</span>
         <span class="pl-2 pr-2">{{account.email}}</span>
@@ -16,7 +16,19 @@
       <div class="d-flex justify-content-between">
         <span class="pr-2">密码</span>
         <a href="{{ sitemap.password }}" class="pl-2 pr-2">修改</a>
-      </div>   
+      </div>
+    </div>
+
+    <div class="mt-3 pb-3 mb-3">
+      <h5 class="pb-2 border-bottom">账号绑定</h5>
+      <div class="d-flex justify-content-between">
+        <span>微信</span>
+        {% if user.isCoupled() %}
+          <span>已绑定 {{ user.wechat.nickname }}</span>
+        {% else %}
+          <a href="{{ sitemap.wxLogin }}">尚未绑定</a>
+        {% endif %}
+      </div>
     </div>
   {% endif %}
 {% endblock %}
