--- a/view/account/update-email.html
+++ b/view/account/update-email.html
@@ -10,8 +10,8 @@
         <input class="form-control"
         id="email"
         type="email" 
-        name="account[email]" 
-        value="{{account.email}}"
+        name="email" 
+        value="{{email}}"
         required>
   
         {% if errors.email %}
