refactor: add maxlength

--- a/view/profile/mobile.html
+++ b/view/profile/mobile.html
@@ -10,6 +10,7 @@
       <input class="form-control"
         id="mobile"
         type="text"
+        maxlength="11"
         name="profile[mobile]"
         value="{{profile.mobile}}">
 
