--- a/view/forgot-password/success.html
+++ b/view/forgot-password/success.html
@@ -8,7 +8,7 @@
 <div class="mt-4">
   {% if alert.key == "letter_sent" %}
     <div>请检查您的邮件，点击邮件中的“重置密码”按钮修改您的密码。如果几分钟内没有看到邮件，请检查是否被放进了垃圾邮件列表。</div>
-    <a class="btn btn-primary btn-block" href="{{sitemap.login}}">返回</a>
+    <a class="btn btn-primary btn-block mt-2" href="{{sitemap.login}}">返回</a>
   {% endif %}
 
   {% if alert.key == "password_reset" %}
