feat: add maxlength

--- a/view/profile/display-name.html
+++ b/view/profile/display-name.html
@@ -10,6 +10,7 @@
       <input class="form-control"
         id="name"
         type="text"
+        maxlength="64"
         name="profile[userName]"
         value="{{profile.userName}}">
 
