--- a/view/login.html
+++ b/view/login.html
@@ -13,7 +13,7 @@
     </div>
   {% endif %}
 
-  <form method="post">
+  <form method="post" id="loginForm">
     <div class="form-group">
       <label for="email">邮箱</label>
       <input class="form-control"
@@ -61,5 +61,6 @@
   </form>
   <p class="text-center pt-3">还没有FT中文网账号?<a href="{{sitemap.signup}}">创建</a></p>
 </div>
+
 
 {% endblock %}
