--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -15,10 +15,10 @@
   
   {% if env.isProduction %}
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <style>{% include "main.css" %}</style>
+  {% include "assets/style.min.html" %}
   {% else %}
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/style/bundle.css">
   {% endif %}
   
 </head>
@@ -159,15 +159,16 @@
   
   {% if env.isProduction %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.23/bootstrap-native-v4.min.js"></script>
+  {% include "assets/js.min.html" %}
+
   {% else %}
   <script src="/bootstrap.native/dist/bootstrap-native-v4.js"></script>
+  <script scr="/script/bundle.js"></script>
   {% endif %}
 
   <script>
     function initSpinner() {
       const loginForm = document.getElementById("loginForm");
-    
-      console.log(loginForm);
 
       if (!loginForm) {
         return;
