feat: refactor css by scss

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,318 +1,62 @@
+@import "palette";
+
 body {
-    font-family: "Helvetica Neue", "Lucida Grande", Verdana, "PingFang SC", "PingFang TC", "Hiragino Sans GB", "Heiti SC", "Heiti TC", "WenQuanYi Micro Hei", "Microsoft YaHei", "Microsoft JhengHei", STHeiti, sans-serif;
-    background-color: #FFF1E5; }
+  font-family: "Helvetica Neue", "Lucida Grande", Verdana, "PingFang SC",
+    "PingFang TC", "Hiragino Sans GB", "Heiti SC", "Heiti TC",
+    "WenQuanYi Micro Hei", "Microsoft YaHei", "Microsoft JhengHei", STHeiti,
+    sans-serif;
+  background-color: $color-paper;
+}
 .page-content {
   min-height: 80vh;
-} 
+}
 table caption {
   caption-side: top;
   text-align: right;
-} 
+}
 a, .text-teal {
-    color: #0d7680
+  color: $color-teal;
 }
 
-a:hover {
-    color: #4D4845;
-}
-  .alert, .btn {
-    border-radius: 0; }
-  
-  .btn-primary {
-    background-color: #0D7680;
-    color: #fff; }
-    .btn-primary:hover {
-      background-color: #0A5E66;
-      border-color: transparent; }
-    .btn-primary:focus, .btn-primary.focus {
-      background-color: #0A5E66;
-      border-color: transparent; }
-    .btn-primary.disabled, .btn-primary:disabled {
-      pointer-events: none;
-      opacity: .4;
-      cursor: default; }
-    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-    .show > .btn-primary.dropdown-toggle {
-      color: #fff;
-      background-color: #08474D;
-      border-color: transparent; }
-  
-  .btn-outline-primary {
-    color: #0D7680;
-    background-color: transparent;
-    border-color: #0D7680; }
-    .btn-outline-primary:hover {
-      color: #0D7680;
-      background-color: rgba(13, 118, 128, 0.1);
-      border-color: #0D7680; }
-    .btn-outline-primary:focus, .btn-outline-primary.focus {
-      color: #0D7680;
-      background-color: rgba(13, 118, 128, 0.1);
-      border-color: #0D7680; }
-    .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-      pointer-events: none;
-      opacity: .4;
-      cursor: default; }
-    .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
-    .show > .btn-outline-primary.dropdown-toggle {
-      color: #fff;
-      background-color: #0D7680;
-      border-color: #0D7680; }
-      
-  .o-toggler {
-    padding: 0.25rem 0.75rem;
-    font-size: 1.25rem;
-    line-height: 1;
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    cursor: pointer;
+a {
+  &:hover {
+    color: $color-black70;
   }
-
-  .form-label {
-    font-weight: 600;
-    color: #33302E; }
-  
-  .form-control {
-    border-radius: 0; }
-    .form-control:disabled {
-      background-color: #E6D9CE;
-      color: #66605C;
-      border-color: #E6D9CE;
-      cursor: default; }
-  
-  .form-errortext {
-    color: #CC0000;
-    font-size: 14px;
-    line-height: 16px;
-    clear: both;
-    display: block;
-    margin-top: -1px;
-    padding: 3px 0; }
-  
-  .form-invalid {
-    background-color: #fff;
-    color: #CC0000;
-    border-color: #CC0000; }
-
-.o-header {
-    background-color: #fff1e5;
-    color: #33302e;
-    border-bottom: 1px solid #ccc1b7;
 }
 
-.navbar-brand, .dropdown-toggle {
-    color: #33302e;
-}
-
-.navbar-brand:hover, .dropdown-toggle:hover {
-    color: #4D4845;
-}
-
-.nav-link {
-  position: relative;
-}
-.nav-link.active:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 4px;
-  height: 100%;
-  background-color: #0a5e66;
-}
-.o-card-group .card {
-  height: 100%;
-  background-color: transparent;
+.alert,
+.btn {
   border-radius: 0;
 }
-.o-card-group .card-title {
-  border-bottom: 1px solid #26747a;
+
+@import "card";
+@import "header";
+@import "nav";
+@import "button";
+@import "form";
+@import "footer";
+
+.o-toggler {
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
-.o-card-group .card ul {
-  padding-left: 0;
-}
-.o-card-group .card li {
-  list-style-position: outside;
-  list-style-type: none;
-  padding-left: 1.5em;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  background-size: 1.5em;
-  background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:tick?tint=26747a&format=svg&source=ftchinese);
-  background-repeat: no-repeat;
-  background-position: left top;
-}
-.o-card-group .card-footer {
-  background-color:transparent;
-  border-top: 0;
-}
-.o-footer {
-  margin-top: 40px;
-  border-top: 10px solid;
-  line-height: 20px; }
-  .o-footer a {
-    border-bottom: 0;
-    text-decoration: none; }
 
-.o-footer--theme-dark {
-  color: #ffffff;
-  background-color: #33302E;
-  border-color: #0A5E66; }
-  .o-footer--theme-dark a {
-    color: #B3A9A0; }
-    .o-footer--theme-dark a:hover, .o-footer--theme-dark a:focus {
-      color: #ffffff; }
-
-.o-footer--theme-light {
-  color: #33302E;
-  background-color: #F2E5DA;
-  border-color: #990F3D; }
-  .o-footer--theme-light a {
-    color: #4D4845; }
-    .o-footer--theme-light a:hover, .o-footer--theme-light a:focus {
-      color: #ffffff; }
-
-.o-footer__container {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  min-width: 240px;
-  max-width: 1220px;
-  /*autoprefixer: off*/
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  max-width: 1220px;
-  padding-left: 10px;
-  padding-right: 10px; }
-  @media (min-width: 46.25em) {
-    .o-footer__container {
-      padding-left: 20px;
-      padding-right: 20px; } }
-  @media (min-width: 46.25em) {
-    .o-grid-snappy .o-footer__container, .o-footer__container--snappy {
-      max-width: 740px; } }
-  @media (min-width: 61.25em) {
-    .o-grid-snappy .o-footer__container, .o-footer__container--snappy {
-      max-width: 980px; } }
-  @media (min-width: 76.25em) {
-    .o-grid-snappy .o-footer__container, .o-footer__container--snappy {
-      max-width: 1220px; } }
-  @media \0screen {
-    .o-footer__container {
-      padding-left: 20px;
-      padding-right: 20px;
-      width: 980px; } }
-
-.o-footer__row {
-  margin-top: 20px; }
-
-.o-footer__copyright {
-  padding-top: 20px;
-  padding-bottom: 20px; }
-  .o-footer--theme-dark .o-footer__copyright {
-    color: #B3A9A0; }
-  .o-footer--theme-light .o-footer__copyright {
-    color: #4D4845; }
-  .o-footer__copyright a {
-    text-decoration: underline; }
-
-.o-footer__matrix {
-  clear: both;
-  flex-wrap: wrap;
-  display: flex;
-  margin-left: -10px;
-  zoom: 1; }
-  @media print {
-    .o-footer__matrix {
-      display: inherit; } }
-  @media (min-width: 46.25em) {
-    .o-footer__matrix {
-      margin-left: -20px; } }
-  @media \0screen {
-    .o-footer__matrix {
-      margin-left: -20px; } }
-  .o-footer__matrix:before, .o-footer__matrix:after {
-    content: '';
-    display: table;
-    display: flex; }
-  .o-footer__matrix:after {
-    clear: both; }
-
-.o-footer__matrix-group {
-  position: relative;
-  float: left;
-  flex: 1 1 0%;
-  /*autoprefixer: off*/
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding-left: 10px; }
-  @media \0screen {
-    .o-footer__matrix-group {
-      min-width: 0 !important; } }
-  @media (min-width: 46.25em) {
-    .o-footer__matrix-group {
-      padding-left: 20px; } }
-  @media \0screen {
-    .o-footer__matrix-group {
-      padding-left: 20px; } }
-
-.o-footer__matrix-group {
-  display: block;
-  flex-basis: 50%;
-  min-width: 50%;
-  max-width: 50%;
-  width: 50%; }
-  @media (min-width: 46.25em) {
-    .o-footer__matrix-group {
-      display: block;
-      flex-basis: 25%;
-      min-width: 25%;
-      max-width: 25%; } }
-  @media \0screen {
-    .o-footer__matrix-group {
-      display: block;
-      width: 25%; } }
-  @media (min-width: 61.25em) {
-    .o-footer__matrix-group {
-      display: block;
-      flex-basis: 16.66667%;
-      min-width: 16.66667%;
-      max-width: 16.66667%; } }
-  @media \0screen {
-    .o-footer__matrix-group {
-      display: block;
-      width: 16.66667%; } }
-
-.o-footer__matrix-title, .o-footer__matrix-link {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-
-.o-footer__matrix-title {
-  margin: 0;
-  line-height: inherit;
-  font-size: inherit;
-  font-weight: 600; }
-
-.o-footer__matrix-content {
-  margin-top: 10px;
-  margin-bottom: 10px; }
-
-.o-footer__matrix-link {
-  display: block;
-  padding: 4px 0; }
-.overlay {
-  visibility: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
+.global-spinner {
+  display: none;
   position: fixed;
-  right: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
+  top: 50%;
+  left: 50%;
+  margin-top: -1rem;
+  margin-left: -1rem;
 }
-.overlay.show {
+.global-spinner.show {
   visibility: visible;
+}
+.global-spinner.hide {
+  display: block;
 }
