feat: add state for submit button

--- a/view/account/password.html
+++ b/view/account/password.html
@@ -46,8 +46,15 @@
         {% endif %}
       </div>
       
-      <button type="submit" class="btn btn-primary">保存密码</button>
-      <a href="{{sitemap.passwordReset}}" target="_blank">忘记密码？</a>
+      <div class="d-flex justify-content-between">
+        <button
+          type="submit"
+          data-disable-with="保存..."
+          class="btn btn-primary">保存密码</button>
+
+        <a href="{{sitemap.passwordReset}}" target="_blank">忘记密码？</a>
+      </div>
+      
     </form>    
   </section>
 
