--- a/view/forgot-password/enter-email.html
+++ b/view/forgot-password/enter-email.html
@@ -30,7 +30,10 @@
 
     </div>
 
-    <button class="btn btn-block btn-primary" type="submit">发送邮件</button>
+    <button 
+      class="btn btn-block btn-primary" 
+      type="submit"
+      data-disable-with="正在发送...">发送邮件</button>
 
   </form>      
 </div>
