--- a/view/forgot-password/new-password.html
+++ b/view/forgot-password/new-password.html
@@ -30,7 +30,10 @@
       {% endif %}
 
     </div>
-    <button class="btn btn-primary btn-block" type="submit">重置密码</button>
+    <button 
+      class="btn btn-primary btn-block" 
+      type="submit"
+      data-disable-with="保存新密码...">重置密码</button>
   </form>
 </div>
   
