--- a/view/login.html
+++ b/view/login.html
@@ -57,7 +57,10 @@
       <a class="float-right" href="{{sitemap.passwordReset}}">忘记密码?</a>
     </div>
 
-    <button class="btn btn-block btn-primary" type="submit">登录</button>
+    <button
+      class="btn btn-block btn-primary" 
+      data-disable-with="正在登录..."
+      type="submit">登录</button>
   </form>
   <p class="text-center pt-3">还没有FT中文网账号?<a href="{{sitemap.signup}}">创建</a></p>
 </div>
