--- a/view/profile/mobile.html
+++ b/view/profile/mobile.html
@@ -18,7 +18,10 @@
         <div class="form-errortext">{{errors.mobile}}</div>
       {% endif %}
     </div>
-    <button type="submit" class="btn btn-primary">保存</button>
+    <button
+      type="submit"
+      data-disable-with="保存..."
+      class="btn btn-primary">保存</button>
   </form>
 </section>
 
