--- a/view/account/email-exists.html
+++ b/view/account/email-exists.html
@@ -21,7 +21,9 @@
             {% endif %}
           </div>
       
-          <button type="submit" class="btn btn-primary btn-block">下一步</button>
+          <button 
+            type="submit" 
+            class="btn btn-primary btn-block">下一步</button>
         </form>
     </div>
   </div>
