--- a/view/account/update-email.html
+++ b/view/account/update-email.html
@@ -19,7 +19,10 @@
         {% endif %}
       </div>
   
-      <button type="submit" class="btn btn-primary">更新</button>
+      <button
+        type="submit"
+        data-disable-with="更新..."
+        class="btn btn-primary">更新</button>
     </form>
   </section>
 
