--- a/view/profile/address.html
+++ b/view/profile/address.html
@@ -86,7 +86,10 @@
         </div>
       </div>
       
-      <button type="submit" class="btn btn-primary">保存</button>
+      <button
+        type="submit"
+        data-disable-with="保存..."
+        class="btn btn-primary">保存</button>
     </form>    
   </div>
 
