--- a/view/profile/display-name.html
+++ b/view/profile/display-name.html
@@ -21,7 +21,10 @@
       {% endif %}
     </div>
     
-    <button type="submit" class="btn btn-primary">保存</button>
+    <button 
+      type="submit" 
+      data-disable-with="保存..."
+      class="btn btn-primary">保存</button>
   </form>
 </section>
 
