--- a/view/signup.html
+++ b/view/signup.html
@@ -40,7 +40,10 @@
       {% endif %}
     </div>
   
-    <button class="btn btn-block btn-primary" type="submit">注册</button>
+    <button
+      class="btn btn-block btn-primary"
+      type="submit"
+      data-disable-with="正在注册...">注册</button>
   
   </form>
   <small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
