feat: add spinner in button

--- a/view/account/email-exists.html
+++ b/view/account/email-exists.html
@@ -23,7 +23,10 @@
       
           <button 
             type="submit" 
-            class="btn btn-primary btn-block">下一步</button>
+            class="btn btn-primary btn-block">
+            下一步
+            {% include "partials/spinner.html" %}
+          </button>
         </form>
     </div>
   </div>
