--- a/view/account/signup.html
+++ b/view/account/signup.html
@@ -40,7 +40,9 @@
           {% endif %}
         </div>
       
-        <button class="btn btn-block btn-primary" type="submit">注册</button>
+        <button 
+          class="btn btn-block btn-primary" type="submit"
+          data-disable-with="正在注册...">注册</button>
       
       </form>
     </div>
