--- a/view/account/login.html
+++ b/view/account/login.html
@@ -46,7 +46,10 @@
           {% endif %}
         </div>
         
-        <button class="btn btn-block btn-primary" type="submit">登录</button>
+        <button
+          class="btn btn-block btn-primary" 
+          type="submit"
+          data-disable-with="正在登录...">登录</button>
       </form>
 
       <div class="mt-3">
