--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -153,7 +153,7 @@
   </footer>
 
   <div class="global-spinner">
-    <div class="spinner-border" role="status">
+    <div class="spinner-border" role="status" aria-hidden="true">
       <span class="sr-only">加载中...</span>
     </div>
   </div>
