--- a/view/account/merge.html
+++ b/view/account/merge.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-  <h2 class="mt-3 mb-5">绑定FT中文网账号</h2>
+  <h2 class="mt-3 mb-5">绑定账号</h2>
   <div class="row justify-content-center">
     <div class="col-md-8">
 
@@ -10,7 +10,7 @@
 
         <div class="card-header">FT中文网账号</div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between">
             <span>邮箱</span>
             <span>{{ ftcAccount.email }}</span>
           </li>
@@ -50,7 +50,7 @@
         <p class="text-danger">{{ denyMerge }}</p>
       {% else %}
       <form method="post" action="{{ sitemap.bindMerge }}">
-        <input type="hidden" name="userId" value="{{ftcAccount.id}}">
+        <input type="hidden" name="userId" value="{{userId}}">
         <button 
           class="btn btn-block btn-primary"
           type="submit"
