feat: add mailto link for customer service

--- a/view/subscription/membership.html
+++ b/view/subscription/membership.html
@@ -41,9 +41,9 @@
       <h2>订阅FT中文网会员</h2>
       <div class="container">
         <div class="row">
-            <div class="col-12 pt-3 pb-3">
-                <h4 class="text-center">请选择您的订阅方式</h4>
-            </div>
+          <div class="col-12 pt-3 pb-3">
+              <h4 class="text-center">请选择您的订阅方式</h4>
+          </div>
         </div>
         
         <div class="row justify-content-around o-card-group">
@@ -88,6 +88,8 @@
       </div>
 
     {% endif %}
+
+    <p class="pt-5">如果订阅时遇到问题，可以致函 <a href="{{ mailTo }}">FT客服邮箱</a></p>
   </div>
 
 {% endblock %}
