feat: trial implementation of feedback

--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -152,6 +152,12 @@
     </div>
   </footer>
 
+  {#
+  <a href="{{ sitemap.feedback }}" class="feedback">
+    <span>新版反馈</span>
+  </a>
+  #}
+
   <div class="global-spinner">
     <div class="spinner-border" role="status" aria-hidden="true">
       <span class="sr-only">加载中...</span>
